--- a/shop/templates/shop/contact.html
+++ b/shop/templates/shop/contact.html
@@ -32,7 +32,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<ul>
 		   <li> <a href="{% url 'logout' %}"  ><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Logout </a></li>
 
-			<li><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:info@example.com">info@example.com</a></li>
+			<li><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:eliteshoppy41@gmail.com">eliteshoppy41@gmail.com</a></li>
 		</ul>
 	</div>
 </div>
@@ -41,11 +41,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="header-bot">
 	<div class="header-bot_inner_wthreeinfo_header_mid">
 		<div class="col-md-4 header-middle">
-			<form action="#" method="post">
-				<input type="search" name="search" placeholder="Search here..." required="">
-					<input type="submit" value=" ">
-				<div class="clearfix"></div>
-			</form>
+			
 		</div>
 		<!-- header-bot -->
 			<div class="col-md-4 logo_agile">
@@ -55,16 +51,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="col-md-4 agileits-social top_content">
 						<ul class="social-nav model-3d-0 footer-social w3_agile_social">
 						                                   <li class="share">Share On : </li>
-															<li><a href="#" class="facebook">
+															<li><a href="https://www.facebook.com/" class="facebook">
 																  <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-facebook" aria-hidden="true"></i></div></a></li>
-															<li><a href="#" class="twitter"> 
+															<li><a href="https://www.twitter.com/" class="twitter"> 
 																  <div class="front"><i class="fa fa-twitter" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-twitter" aria-hidden="true"></i></div></a></li>
-															<li><a href="#" class="instagram">
+															<li><a href="https://www.instagram.com/" class="instagram">
 																  <div class="front"><i class="fa fa-instagram" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-instagram" aria-hidden="true"></i></div></a></li>
-															<li><a href="#" class="pinterest">
+															<li><a href="https://www.linkedin.com/" class="pinterest">
 																  <div class="front"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-linkedin" aria-hidden="true"></i></div></a></li>
 														</ul>
@@ -96,73 +92,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				  <ul class="nav navbar-nav menu__list">
 					<li class="active menu_item"><a class="menu_link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a></li>
 					<li class=" menu_item"><a class="menu_link" href="{% url 'about' %}">About</a></li>
-					<li class="dropdown menu__item">
-						<a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Men's wear <span class="caret"></span></a>
-							<ul class="dropdown-menu multi-column columns-3">
-								<div class="agile_inner_drop_nav_info">
-									<div class="col-sm-6 multi-gd-img1 multi-gd-text ">
-										<a href="{% url 'mens' %}"><img src="{% static 'shop/images/top2.jpg' %}" alt=" "/></a>
-									</div>
-									<div class="col-sm-3 multi-gd-img">
-										<ul class="multi-column-dropdown">
-											<li><a href="{% url 'mens' %}">Clothing</a></li>
-											<li><a href="{% url 'mens' %}">Wallets</a></li>
-											<li><a href="{% url 'mens' %}">Footwear</a></li>
-											<li><a href="{% url 'mens' %}">Watches</a></li>
-											<li><a href="{% url 'mens' %}">Accessories</a></li>
-											<li><a href="{% url 'mens' %}">Bags</a></li>
-											<li><a href="{% url 'mens' %}">Caps & Hats</a></li>
-										</ul>
-									</div>
-									<div class="col-sm-3 multi-gd-img">
-										<ul class="multi-column-dropdown">
-											<li><a href="{% url 'mens' %}">Jewellery</a></li>
-											<li><a href="{% url 'mens' %}">Sunglasses</a></li>
-											<li><a href="{% url 'mens' %}">Perfumes</a></li>
-											<li><a href="{% url 'mens' %}">Beauty</a></li>
-											<li><a href="{% url 'mens' %}">Shirts</a></li>
-											<li><a href="{% url 'mens' %}">Sunglasses</a></li>
-											<li><a href="{% url 'mens' %}">Swimwear</a></li>
-										</ul>
-									</div>
-									<div class="clearfix"></div>
-								</div>
-							</ul>
-					</li>
-					<li class="dropdown menu__item">
-						<a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Women's wear <span class="caret"></span></a>
-							<ul class="dropdown-menu multi-column columns-3">
-								<div class="agile_inner_drop_nav_info">
-									<div class="col-sm-3 multi-gd-img">
-										<ul class="multi-column-dropdown">
-											<li><a href="{% url 'womens' %}">Clothing</a></li>
-											<li><a href="{% url 'womens' %}">Wallets</a></li>
-											<li><a href="{% url 'womens' %}">Footwear</a></li>
-											<li><a href="{% url 'womens' %}">Watches</a></li>
-											<li><a href="{% url 'womens' %}">Accessories</a></li>
-											<li><a href="{% url 'womens' %}">Bags</a></li>
-											<li><a href="{% url 'womens' %}">Caps & Hats</a></li>
-										</ul>
-									</div>
-									<div class="col-sm-3 multi-gd-img">
-										<ul class="multi-column-dropdown">
-											<li><a href="{% url 'womens' %}">Jewellery</a></li>
-											<li><a href="{% url 'womens' %}">Sunglasses</a></li>
-											<li><a href="{% url 'womens' %}">Perfumes</a></li>
-											<li><a href="{% url 'womens' %}">Beauty</a></li>
-											<li><a href="{% url 'womens' %}">Shirts</a></li>
-											<li><a href="{% url 'womens' %}">Sunglasses</a></li>
-											<li><a href="{% url 'womens' %}">Swimwear</a></li>
-										</ul>
-									</div>
-									<div class="col-sm-6 multi-gd-img multi-gd-text ">
-										<a href="{% url 'womens' %}"><img src="{% static 'shop/images/top1.jpg' %}" alt=" "/></a>
-									</div>
-									<div class="clearfix"></div>
-								</div>
-							</ul>
-					</li>
-					
+			        <li class=" menu_item"><a class="menu_link" href="{% url 'mens' %}">Mens</a></li>
+					<li class=" menu_item"><a class="menu_link" href="{% url 'womens' %}">Womens</a></li>		
 					<li class=" menu_item menuitem--current"><a class="menu_link" href="{% url 'contact' %}">Contact</a></li>
 					<li class=" menu_item"><a class="menu_link" href="{% url 'profile' %}">Profile</a></li>
 				  </ul>
@@ -212,16 +143,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<input type="submit" value="Sign In">
 						</form>
 						  <ul class="social-nav model-3d-0 footer-social w3_agile_social top_agile_third">
-															<li><a href="#" class="facebook">
+															<li><a href="https://www.facebook.com/" class="facebook">
 																  <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-facebook" aria-hidden="true"></i></div></a></li>
-															<li><a href="#" class="twitter"> 
+															<li><a href="https://www.twitter.com/" class="twitter"> 
 																  <div class="front"><i class="fa fa-twitter" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-twitter" aria-hidden="true"></i></div></a></li>
-															<li><a href="#" class="instagram">
+															<li><a href="https://www.instagram.com/" class="instagram">
 																  <div class="front"><i class="fa fa-instagram" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-instagram" aria-hidden="true"></i></div></a></li>
-															<li><a href="#" class="pinterest">
+															<li><a href="https://www.linkedin.com/" class="pinterest">
 																  <div class="front"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-linkedin" aria-hidden="true"></i></div></a></li>
 														</ul>
@@ -275,16 +206,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							 {% endif %}	 
 						</form>
 						  <ul class="social-nav model-3d-0 footer-social w3_agile_social top_agile_third">
-															<li><a href="#" class="facebook">
+															<li><a href="https://www.facebook.com/" class="facebook">
 																  <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-facebook" aria-hidden="true"></i></div></a></li>
-															<li><a href="#" class="twitter"> 
+															<li><a href="https://www.twitter.com/" class="twitter"> 
 																  <div class="front"><i class="fa fa-twitter" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-twitter" aria-hidden="true"></i></div></a></li>
-															<li><a href="#" class="instagram">
+															<li><a href="https://www.instagram.com/" class="instagram">
 																  <div class="front"><i class="fa fa-instagram" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-instagram" aria-hidden="true"></i></div></a></li>
-															<li><a href="#" class="pinterest">
+															<li><a href="https://www.linkedin.com/" class="pinterest">
 																  <div class="front"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-linkedin" aria-hidden="true"></i></div></a></li>
 														</ul>
@@ -342,7 +273,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="contact-grid-agile-w33">
 							<i class="fa fa-envelope-o" aria-hidden="true"></i>
 							<h4>Email</h4>
-							<p><a href="mailto:info@example.com">{{ data.email1}}</a><span><a href="mailto:info@example.com">{{ data.email2}}</a></span></p>
+							<p><a href="mailto:eliteshoppy41@gmail.com">{{ data.email1}}</a><span><a href="mailto:eliteshoppy41@gmail.com">{{ data.email2}}</a></span></p>
 						</div>
 					</div>
 					<div class="clearfix"> </div>
@@ -371,7 +302,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<div class="mail-agileits-w3layouts">
 								<i class="fa fa-envelope-o" aria-hidden="true"></i>
 								<div class="contact-right">
-									<p>Mail </p><a href="mailto:info@example.com">{{ data.email1}}</a>
+									<p>Mail </p><a href="mailto:eliteshoppy41@gmail.com">{{ data.email1}}</a>
 								</div>
 								<div class="clearfix"> </div>
 							</div>
@@ -385,16 +316,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<ul class="social-nav model-3d-0 footer-social w3_agile_social two contact">
 							                              <li class="share">SHARE ON : </li>
-															<li><a href="#" class="facebook">
+															<li><a href="https://www.facebook.com/" class="facebook">
 																  <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-facebook" aria-hidden="true"></i></div></a></li>
-															<li><a href="#" class="twitter"> 
+															<li><a href="https://www.twitter.com/" class="twitter"> 
 																  <div class="front"><i class="fa fa-twitter" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-twitter" aria-hidden="true"></i></div></a></li>
-															<li><a href="#" class="instagram">
+															<li><a href="https://www.instagram.com/" class="instagram">
 																  <div class="front"><i class="fa fa-instagram" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-instagram" aria-hidden="true"></i></div></a></li>
-															<li><a href="#" class="pinterest">
+															<li><a href="https://www.linkedin.com/" class="pinterest">
 																  <div class="front"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-linkedin" aria-hidden="true"></i></div></a></li>
 														</ul>
@@ -426,34 +357,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</form>
 					</div>
 				</div>
-				 <table class="table border">
-        <thead>
-            <tr>
-                <th scope="col"> ID# </th>
-                <th scope="col"> Name </th>
-                <th scope="col"> Email </th>
-                <th scope="col"> Subject </th>
-                <th scope="col"> Message</th>
-				<th scope="col">Action</th>
-				<th scope="col">Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for data in J %}
-            <tr class="tr border">
-                <td>{{ forloop.counter }} </td>
-                <td>{{data.name }} </td>
-                <td>{{data.email }} </td>
-                <td>{{data.subject }} </td>
-                <td>{{data.message}} </td>
-                <td><a href="{% url 'edit1' data.id %}">update</a></td>
-				<td><a href="{% url 'delete1' data.id %}">delete</a></td>
-
-				
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+			
 				<div class="clearfix"> </div>
 			</div>
        </div>
@@ -512,9 +416,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="footer_agile_inner_info_w3l">
 		<div class="col-md-3 footer-left">
 			<h2><a href="{% url 'index' %}"><span>E</span>lite Shoppy </a></h2>
-			<p>Lorem ipsum quia dolor
-			sit amet, consectetur, adipisci velit, sed quia non 
-			numquam eius modi tempora.</p>
+			<p>Elite Shoppy does not sell only clothes 
+			   but footwears and bags too. 
+			   It covers a wide range of fashion items,
+			   and serves both men and women. 
+			   Our goal is to get the customer satisfaction.</p>
 			<ul class="social-nav model-3d-0 footer-social w3_agile_social two">
 															<li><a href="https://www.facebook.com/" class="facebook">
 																  <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
@@ -541,6 +447,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="{% url 'about' %}">About</a></li>
 						
 						<li><a href="{% url 'contact' %}">Contact</a></li>
+						<li><a href="{% url 'profile' %}">Profile</a></li>
 					</ul>
 				</div>
 				 {% for data in H %}
@@ -563,7 +470,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<div class="w3-address-right">
 								<h6>Email Address</h6>
-								<p>Email :<a href="mailto:example@email.com"> {{ data.email1}}</a></p>
+								<p>Email :<a href="mailto:eliteshoppy41@gmail.com"> {{ data.email1}}</a></p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
@@ -600,20 +507,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		</div>
 		<div class="clearfix"></div>
-			<div class="agile_newsletter_footer">
-					<div class="col-sm-6 newsleft">
-				<h3>SIGN UP FOR NEWSLETTER !</h3>
-			</div>
-			<div class="col-sm-6 newsright">
-				<form action="#" method="post">
-					<input type="email" placeholder="Enter your email..." name="email" required="">
-					<input type="submit" value="Submit">
-				</form>
-			</div>
+		
 
 		<div class="clearfix"></div>
 	</div>
-		<p class="copy-right">&copy 2017 Elite shoppy. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
 	</div>
 </div>
 <!-- //footer -->
